--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,18 @@ header nav {
   font-size: 18px;
 }
 
+.cardButtonRed {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: red;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
 .cardButton:hover {
   opacity: 0.6;
 }
@@ -111,3 +123,138 @@ header nav {
   width: 50%;
   font-size: 22px;
 }
+
+.jumbotron {
+background: #fff none repeat scroll 0 0;
+border: 1px solid #000;
+border-radius: 1px !important;
+color: inherit;
+margin-bottom: 30px;
+overflow: hidden;
+padding: 30px 15px;
+}
+
+.totalBuy{
+  font-size: 20px;
+  word-spacing: 180px;
+  
+}
+
+.subTotal{
+  font-size: 18px;
+  word-spacing: 180px;
+}
+
+.shipping{
+  font-size: 18px;
+  word-spacing: 220px;
+}
+
+.informaciónUtil {
+  grid-area: información;
+  font-size: 28px;
+  text-align: justify;
+  padding-top: 40px;
+  padding-left: 220px;
+}
+
+.contacto {
+  grid-area: contacto;
+  font-size: 28px;
+  text-align: justify;
+  padding-top: 40px;
+  padding-right: 40px;
+}
+
+.copyright {
+  grid-area: copyright;
+  padding-left: 220px;
+}
+
+.linksFooter {
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+}
+
+.linksFooter:hover {
+  text-decoration: none;
+  color: white;
+}
+
+.redes {
+  grid-area: redes;
+  font-size: 28px;
+  text-align: justify;
+  padding-top: 40px;
+}
+
+.empty {
+  grid-area: empty;
+}
+
+.endPage {
+  font-family: "Bangers", cursive;
+  display: grid;
+  grid-template-areas: "empty información contacto redes" "empty información contacto redes" "empty copyright copyright copyright";
+}
+
+.mediaFlex {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: left;
+  padding-right: 280px;
+}
+
+.instagram {
+  height: 60px;
+  padding: 0px;
+  list-style: none;
+}
+
+.instagram:hover {
+  background-color: #cc2199;
+}
+
+.facebook {
+  height: 60px;
+  align-content: flex-start;
+  list-style: none;
+}
+
+.facebook:hover {
+  background-color: #3b5998;
+}
+
+.youtube {
+  height: 60px;
+  list-style: none;
+}
+
+.youtube:hover {
+  background-color: #c4302b;
+}
+
+.slideIndex {
+  max-width: 100%;
+  max-height: 100%;
+  padding: 20px;
+  margin: 20px;
+}
+.kindredImage {
+  padding: 40px;
+  margin: 40px;
+  width: 800px;
+  max-width: 100%;
+  height: 450px;
+}
+
+.spaceTable{
+  border-spacing: 10px;
+  border-collapse: separate;
+}
+
+.totalCart{
+  font-size: 20px;
+}
+
